COD-194: add direct media upload foundation
